updated setup with DOM container mounting

--- a/edit-user-app-vue3/public/index.html
+++ b/edit-user-app-vue3/public/index.html
@@ -5,7 +5,8 @@
     <title>Edit User App</title>
   </head>
   <body>
-    <h1>Edit User App (Vue 3)</h1>
-    <edit-user-app></edit-user-app>
+    <h1>Edit App (Vue 3 )</h1>
+    <div id="app"></div>
+    <!-- This is where the List component will be mounted -->
   </body>
 </html>
