--- a/users-app-vue3/public/index.html
+++ b/users-app-vue3/public/index.html
@@ -5,7 +5,7 @@
     <title>User App</title>
   </head>
   <body>
-    <h1>User App (Vue 3)</h1>
-    <user-app></user-app>
+    <h1>User App (Vue 3 )</h1>
+    <div id="app"></div>
   </body>
 </html>
