--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><title>Edit User App</title><script defer="defer" src="main.js"></script><script defer="defer" src="remoteEntry.js"></script></head><body><h1>Edit App (Vue 3 )</h1><div id="app"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><title>User App</title><script defer="defer" src="main.js"></script><script defer="defer" src="remoteEntry.js"></script></head><body><h1>User App (Vue 3 )</h1><div id="app"></div></body></html>
