update vecel file

--- a/users-app-vue3/public/index.html
+++ b/users-app-vue3/public/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>User App</title>
-  </head>
-  <body>
-    <h1>User App (Vue 3 )</h1>
-    <div id="app"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><title>User App</title><script defer="defer" src="main.2ab05a54840c801d9f7c.js"></script><script defer="defer" src="remoteEntry.js"></script><script defer="defer" src="main.2ab05a54840c801d9f7c.js"></script><script defer="defer" src="remoteEntry.js"></script></head><body><h1>User App (Vue 3 )</h1><div id="app"></div></body></html>
